# com.aiunity.editor-agent

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  package.json
Editor/: AiUnity.EditorAgent.Editor.asmdef
Editor/Core/: AiConsoleUtility.cs  AiEditorAgentPaths.cs  AiEditorAgentSettings.cs  AiEditorAgentWindow.cs  AiEditorApiServer.cs  AiJson.cs  AiProtocolUtility.cs  AiResultResponseBuilder.cs  AiToolRegistry.cs
Editor/Tools/: AssetTools.cs  CompileTools.cs  SceneTools.cs  SystemTools.cs  ToolManagementTools.cs
Samples~/GeneratedToolExample/: ExampleGeneratedTool.cs.txt
android/: README.md
android/ai_android_agent/: AGENT.md  README.md  pyproject.toml
android/ai_android_agent/ai_android_agent/: __init__.py  android_runner.py  cli.py  models.py  result_handles.py  server.py  tools.py
blender/ai_blender_agent/: AGENT.md  README.md  pyproject.toml
blender/ai_blender_agent/ai_blender_agent/: __init__.py  blender_bridge.py  blender_runner.py  cli.py  models.py  server.py  tools.py
browser/ai_browser_agent/: AGENT.md  README.md  package.json
browser/ai_browser_agent/lib/: agent_server.mjs  chrome_client.mjs  models.mjs  result_handle_store.mjs  tools.mjs
cocos/: README.md
docs/framework/: AGENT_PROTOCOL.md  DYNAMIC_TOOL_ROLLOUT.md  MINIMAL_INTEGRATION_GUIDE.md  PLATFORM_ROADMAP.md  README.md
figma/ai_figma_agent/: AGENT.md  README.md  pyproject.toml
figma/ai_figma_agent/ai_figma_agent/: __init__.py  cli.py  figma_bridge.py  figma_client.py  models.py  server.py  tools.py
flutter/ai_flutter_agent/: AGENT.md  README.md  pubspec.yaml
flutter/ai_flutter_agent/lib/: ai_flutter_agent.dart
flutter/ai_flutter_agent/lib/src/: agent_server.dart  generated_tool_host.dart  models.dart  result_handle_store.dart  tools.dart
godot/ai_godot_agent/: AGENT.md  README.md  pyproject.toml
godot/ai_godot_agent/ai_godot_agent/: __init__.py  cli.py  godot_bridge.gd  godot_runner.py  models.py  server.py  tools.py
houdini/ai_houdini_agent/: AGENT.md  README.md  pyproject.toml
houdini/ai_houdini_agent/ai_houdini_agent/: __init__.py  cli.py  houdini_bridge.py  houdini_runner.py  models.py  server.py  tools.py
ios/: README.md
ios/ai_ios_agent/: AGENT.md  README.md  pyproject.toml
ios/ai_ios_agent/ai_ios_agent/: __init__.py  cli.py  ios_runner.py  models.py  server.py  tools.py
jetbrains/: README.md
jetbrains/ai_jetbrains_agent/: AGENT.md  README.md  build.gradle.kts  settings.gradle.kts
jetbrains/ai_jetbrains_agent/src/main/kotlin/com/aiplatform/jetbrainsagent/: AiJetBrainsAgentPlugin.kt  DynamicGeneratedTools.kt
maya/ai_maya_agent/: AGENT.md  README.md  pyproject.toml
maya/ai_maya_agent/ai_maya_agent/: __init__.py  cli.py  maya_bridge.py  maya_runner.py  models.py  result_handles.py  server.py  tools.py
photoshop/: README.md
photoshop/ai_photoshop_agent/: AGENT.md  README.md  pyproject.toml
photoshop/ai_photoshop_agent/ai_photoshop_agent/: __init__.py  bridge.py  cli.py  generated_tools.py  models.py  result_handles.py  server.py  tools.py
photoshop/ai_photoshop_agent/uxp_plugin/: index.html  main.js  manifest.json  styles.css
revit/: README.md
revit/ai_revit_agent/: AGENT.md  AiRevitAgent.addin.template  AiRevitAgent.csproj  README.md
revit/ai_revit_agent/src/AiRevitAgent/: AiRevitAgent.cs
rhino/: README.md
rhino/ai_rhino_agent/: AGENT.md  AiRhinoAgent.csproj  README.md
rhino/ai_rhino_agent/src/AiRhinoAgent/: AiRhinoAgentPlugin.cs
unity/com.aiunity.editor-agent/: AGENT.md  LICENSE.md  README.md  package.json
unity/com.aiunity.editor-agent/Editor/Core/: AiEditorAgentPaths.cs  AiEditorAgentSettings.cs  AiEditorAgentState.cs  AiEditorAgentWindow.cs  AiEditorApiServer.cs  AiProtocolUtility.cs  AiResultHandleStore.cs  AiToolAttribute.cs  AiToolRegistry.cs  AiTypeUtility.cs
unity/com.aiunity.editor-agent/Editor/Tools/: AssetTools.cs  CompileTools.cs  PrefabTools.cs  SystemTools.cs
unreal/ai_unreal_agent/: AGENT.md  README.md  pyproject.toml
unreal/ai_unreal_agent/ai_unreal_agent/: __init__.py  cli.py  models.py  server.py  tools.py  unreal_bridge.py  unreal_runner.py
vscode/: README.md
vscode/ai_vscode_agent/: AGENT.md  README.md  extension.js  package.json
vscode/ai_vscode_agent/lib/: agent_server.js  generated_tool_host.js  models.js  result_handle_store.js  tools.js
wpf/: README.md
wpf/ai_wpf_agent/: AGENT.md  README.md  pyproject.toml
wpf/ai_wpf_agent/ai_wpf_agent/: __init__.py  cli.py  models.py  server.py  tools.py  wpf_runner.py
