[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-android-agent"
version = "0.1.0"
description = "Android adapter for AI Platform Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-android-agent = "ai_android_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_android_agent*"]
