[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-blender-agent"
version = "0.1.0"
description = "Blender adapter for AI Platform Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-blender-agent = "ai_blender_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_blender_agent*"]
