[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-figma-agent"
version = "0.1.0"
description = "Figma adapter for AI Platform Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-figma-agent = "ai_figma_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_figma_agent*"]
