[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-godot-agent"
version = "0.1.0"
description = "Godot adapter for AI Platform Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-godot-agent = "ai_godot_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_godot_agent*"]
