[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-houdini-agent"
version = "0.1.0"
description = "Houdini adapter for AI Platform Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-houdini-agent = "ai_houdini_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_houdini_agent*"]
