[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ios-agent"
version = "0.1.0"
description = "iOS adapter for AI Platform Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-ios-agent = "ai_ios_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_ios_agent*"]
