[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-photoshop-agent"
version = "0.1.0"
description = "Adobe Photoshop adapter for AI Platform Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-photoshop-agent = "ai_photoshop_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_photoshop_agent*"]
