[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-unreal-agent"
version = "0.1.0"
description = "Unreal adapter for AI Platform Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-unreal-agent = "ai_unreal_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_unreal_agent*"]
