[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-wpf-agent"
version = "0.1.0"
description = "WPF adapter for AI Platform Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-wpf-agent = "ai_wpf_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_wpf_agent*"]
